@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-15T08:27:25Z",
-  "count_outdated" : 138,
-  "uniques_outdated" : 94,
+  "timestamp" : "2022-09-16T02:08:02Z",
+  "count_outdated" : 139,
+  "uniques_outdated" : 95,
   "count" : 143,
   "uniques" : 99,
   "clones" : [
-    {
-      "timestamp": "2022-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-11T00:00:00Z",
       "count": 1,
