@@ -1,3 +1,11 @@
+2022-09-16T02:08:02Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3064945570
+* notice: last 14d: unq all: 1 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 94 138 / 99 143
+* notice: next accum: outdated-unq outdated-all / unq all: 95 139 / 99 143
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-02] / []
+
 2022-09-15T08:27:25Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3058918871
 * notice: last 14d: unq all: 2 5
